content type ldapdirectory

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,94 @@
-[buildout]
-extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
-    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    base.cfg
+# Documentation suivie pour les tests de type robot :
+# http://developer.plone.org/reference_manuals/external/plone.app.robotframework/index.html
 
+
+
+[buildout]
+extends = http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.x.cfg
+develop = .
+parts +=
+    omelette
+    zopepy
+    test
+
+versions = versions
+package-name = iuem.usersandgroups
+# package-extras =
+# test-eggs = plone.app.testing
+# develop = .
+
+extensions =
+    mr.developer
+auto-checkout =
+    iuem.utils
+
+sources = sources
+
+eggs +=
+    plone.reload
+    collective.zodbbrowser
+    plone.reload
+    plone.app.testing
+    iuem.utils
+
+
+[versions]
+
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+eggs =
+    Plone
+    plone.app.upgrade
+    plone.app.testing
+    ${buildout:package-name}
+
+[coverage]
+recipe = zc.recipe.egg
+eggs = coverage
+initialization =
+    include = '--source=${buildout:directory}/src'
+    sys.argv = sys.argv[:] + ['run', include, 'bin/test', '--all']
+
+[report]
+recipe = zc.recipe.egg
+eggs = coverage
+scripts = coverage=report
+initialization =
+    sys.argv = sys.argv[:] + ['html', '-i']
+
+[omelette]
+recipe=collective.recipe.omelette
+eggs=${instance:eggs}
+
+[templer]
+recipe = zc.recipe.egg
+eggs =
+    PasteScript
+    templer.core
+    templer.zope
+    templer.plone
+    templer.dexterity
+    ${instance:eggs}
+
+entry-points = paster=paste.script.command:run
+
+[sources]
+iuem.utils = git gitiuem:iuem.utils.git
+
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    Pillow
+    ${test:eggs}
+    plone.app.robotframework[ride,reload]
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${instance:eggs}
+interpreter = zopepy
+scripts = zopepy
+
+[nodejs]
+recipe = gp.recipe.node
+url = http://nodejs.org/dist/v${versions:nodejs}/node-v${versions:nodejs}.tar.gz
