--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ extensions =
     mr.developer
 auto-checkout =
     iuem.utils
+    iuem.casldap
 
 sources = sources
 
@@ -30,6 +31,7 @@ eggs +=
     plone.reload
     plone.app.testing
     iuem.utils
+    iuem.casldap
 
 
 [versions]
@@ -75,6 +77,7 @@ entry-points = paster=paste.script.command:run
 
 [sources]
 iuem.utils = git gitiuem:iuem.utils.git
+iuem.casldap = git gitiuem:iuem.casldap.git
 
 [robot]
 recipe = zc.recipe.egg
