--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,28 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-*.lo
-*.la
-*.rej
-*.pyc
-*.pyo
-*.mo
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-ehthumbs.db
-Icon?
-Thumbs.db
-*.tmproj
-
-# Editor backup files #
-#######################
-*~
-*.sw[op]
-
-# Other VCSes #
-###############
-.svn
-
-# Python projects related #
-###########################
 *.egg-info
-.egg-info.installed.cfg
-*.pt.py
-*.cpt.py
-*.zpt.py
-*.html.py
-*.egg
-.mr.developer.cfg
+*.mo
+.eggs
+*.pyc
 .installed.cfg
-
-# Eclipse pydev related #
-#########################
+.mr.developer.cfg
 .project
 .pydevproject
-.settings
-
-# Buildout generated folders #
-##############################
-bin
-parts
-develop-eggs
-var
-
-#
-src
+.settings/
+bin/
+buildout-cache/
+develop-eggs/
+parts/
+var/
+htmlcov/
+.coverage
+*.log
+output.xml
+*.swp
+node_modules
+temp_resources
+docs/html/
+docs/pdf/
+docs/latex/
+src/collective.behavior.shortidfromlongtitle/
+src/collective.behavior.textcaptcha/
+src/plonetheme.tebl
+src/webcouturier.dropdownmenu
