--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,9 +4,10 @@
 
 
 [buildout]
-extends = http://svn.plone.org/svn/collective/buildout/plonetest/plone-4.x.cfg
+extends = http://dist.plone.org/release/5.0.6/versions.cfg
 develop = .
-parts +=
+parts =
+	instance
     omelette
     zopepy
     test
@@ -20,18 +21,23 @@ package-name = iuem.usersandgroups
 extensions =
     mr.developer
 auto-checkout =
-    iuem.utils
-    iuem.casldap
+#    iuem.utils
+#    iuem.casldap
 
 sources = sources
 
-eggs +=
-    plone.reload
-    collective.zodbbrowser
-    plone.reload
-    plone.app.testing
-    iuem.utils
-    iuem.casldap
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+eggs =
+    Plone
+    Pillow
+    Products.CMFPlone
+	plone.reload
+	collective.zodbbrowser
+	iuem.usersandgroups [test]
 
 
 [versions]
