--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts =
 	instance
     omelette
     zopepy
+    code-analysis
     test
 
 versions = versions
@@ -101,3 +102,9 @@ scripts = zopepy
 [nodejs]
 recipe = gp.recipe.node
 url = http://nodejs.org/dist/v${versions:nodejs}/node-v${versions:nodejs}.tar.gz
+
+[code-analysis]
+recipe = plone.recipe.codeanalysis
+directory = ${buildout:directory}/iuem
+flake8-exclude = bootstrap.py,bootstrap-buildout.py,docs,*.egg.,omelette,tests.py,xdebug.py,test_*.py,base.py
+flake8-max-complexity = 15
