--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@
 
 
 [buildout]
-extends = http://dist.plone.org/release/5.0.6/versions.cfg
+extends = http://dist.plone.org/release/5.0.6/versions.cfg doc.cfg
 develop = .
 parts =
 	instance
